# discord-bot

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.MD  docker-compose.yml
.github/workflows/: cd.yaml  ci.yaml
crates/migration/: Cargo.toml
crates/migration/src/: lib.rs  m20260330_061253_create_user_prefs.rs  m20260330_063639_create_server_prefs.rs  m20260330_064340_create_translation_support.rs  m20260331_171609_create_kv.rs  m20260331_172229_add_daily_verse_role_to_servers.rs  m20260411_000000_add_votd_to_server_prefs.rs  m20260704_000000_add_seed_bible_links_and_inline_detection.rs
crates/sb-discord-bot/: Cargo.toml
crates/sb-discord-bot/src/: main.rs
crates/sb-discord-bot/src/commands/: framework.rs  mod.rs  slash_commands.rs
crates/sb-discord-bot/src/discord_util/: user.rs
crates/sb-discord-bot/src/handler/: _expanded_serenity_event_handler.rs  handler.rs  message.rs  mod.rs  ready.rs  serenity_partial_traits.rs
crates/sb-discord-bot/src/poise_impl/: data.rs  framework.rs  helpers.rs  mod.rs  replies.rs  slash_commands.rs  test_support.rs  types.rs
crates/sb-discord-bot/src/store/: bibleapi.rs  contract.rs  curated.rs  fake.rs  mod.rs  sqlite.rs  store.rs  valid_cache.rs
crates/sb-discord-bot/src/store/entity/: kv.rs  server_prefs.rs  translation_support_item.rs  translations.rs  user_prefs.rs
crates/sb-discord-bot/src/util/: client.rs  format.rs  gateway.rs  mod.rs  prefs.rs  reference_parser.rs  token.rs
