[package]
name = "sb-discord-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
poise = "0.6.1"
serenity = "0.12"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
sea-orm = { version = "2.0.0-rc", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros"] }
sea-orm-migration = { version = "2.0.0-rc", features = ["sqlx-sqlite", "runtime-tokio-rustls"] }
migration = { path = "../migration" }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
